Hot fix to remove the layout shift caused by the newly-added GitHub star button

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -48,6 +48,7 @@ code {
 }
 
 .star-button-container {
+  height: 20px;
   margin-bottom: 10px;
 }
 
